<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hu.tests</groupId>
	<artifactId>car-manager</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Car-Manager</name>
	<packaging>pom</packaging>
	<properties>
		<lombok.version>1.18.34</lombok.version>
		<joda.version>2.12.7</joda.version>
		<commons.lang.version>3.15.0</commons.lang.version>
		<joda.version>2.12.7</joda.version>
		<arangodb.java.version>6.7.5</arangodb.java.version>
		<jackson.version>4.0.0</jackson.version>
	</properties>
	<modules>
		<module>hu.tests.audi</module>
		<module>hu.tests.audi2</module>
		<module>hu.tests.cars</module>
		<module>hu.tests.frontend</module>
	</modules>
	<build>
		<defaultGoal>package</defaultGoal>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<source>17</source>
						<target>17</target>
						<release combine.self="override"></release>
						<compilerArgs>
							<arg>--add-exports</arg>
							<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>java.base/javax.net=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>java.base/javax.net.ssl=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>java.naming/javax.naming=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>
								jdk.security.auth/com.sun.security.auth=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>java.xml/javax.xml.xpath=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>java.xml/org.w3c.dom=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>${joda.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons.lang.version}</version>
		</dependency>
		<dependency>
			<groupId>fish.payara.extras</groupId>
			<artifactId>payara-embedded-all</artifactId>
			<scope>provided</scope>
			<version>6.2024.7</version>
		</dependency>
		<dependency>
    		<groupId>com.arangodb</groupId>
    		<artifactId>arangodb-java-driver</artifactId>
    		<version>${arangodb.java.version}</version>
  		</dependency>
  		<dependency>
        	<groupId>com.arangodb</groupId>
        	<artifactId>jackson-dataformat-velocypack</artifactId>
        	<version>${jackson.version}</version>
    	</dependency>
		<dependency>
			<groupId>com.arangodb</groupId>
			<artifactId>velocypack-module-jdk8</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.arangodb</groupId>
			<artifactId>jackson-dataformat-velocypack</artifactId>
			<version>0.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.arangodb</groupId>
			<artifactId>velocypack-module-joda</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.arangodb</groupId>
			<artifactId>arangodb-java-driver-async</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.arangodb</groupId>
			<artifactId>arangodb-graphql</artifactId>
			<version>1.2</version>
		</dependency>
	</dependencies>

</project>